<resources>
    <string name="app_name">Mini Library</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="des_act_book_image">Book Image</string>
    <string name="des_act_name_of_the_book">Name of the book</string>
    <string name="des_act_name_of_the_author">Name of the Author</string>
    <string name="_des_act_rs_299">Rs. 299</string>
    <string name="des_act__4_5">4.5</string>
    <string name="des_act_about_the_book">About the Book</string>
    <string name="des_act_description">description</string>
    <string name="des_act_add_to_favourites">Add to Favourites</string>
    <string name="for_pass_succ_password_nupdated">Password\nupdated</string>
    <string name="your_password_has_been_updated">Your password has been updated</string>
    <string name="_for_pass_succ_login">login</string>
    <string name="showing_confirmation">showing confirmation</string>
    <string name="for_pass_act_forgot_password">Forgot Password</string>
    <string name="provide_your_account_s_mobile_no_for_which_you_want_to_reset_your_password">Provide your account\'s mobile no. for which you want to reset your password</string>
    <string name="for_pass_enter_your_mobile_no_here">Enter your mobile no. here</string>
    <string name="for_pass_next">next</string>
    <string name="for_pass_book_logo">Book Logo</string>
    <string name="welcome_to_mini_library">Welcome user!!</string>
    <string name="login_enter_your_mobile_no_here">Enter your mobile no. here</string>
    <string name="login_enter_your_password_here">Enter your password here</string>
    <string name="login_login">LOGIN</string>
    <string name="login_forget_password">Forget password?</string>
    <string name="login_not_registered_sign_up_now">Not registered?Sign up now</string>
    <string name="for_pass_app_logo">App logo</string>
    <string name="login_app_logo">App Logo</string>
    <string name="signup_sign_up">Sign up</string>
    <string name="signup_name">Name(more than 3 letters)</string>
    <string name="signup_email_address">Email address(more than 12 characters including @mail.com)</string>
    <string name="signup_mobile_number">Mobile number(equal to 10 digits)</string>
    <string name="signup_favourite_category_ex_romance_anime_thriller_etc">Favourite Category(ex:Romance,Anime,Thriller etc.)</string>
    <string name="signup_password">Password(more than 5 characters)</string>
    <string name="signup_btn_sign_up">sign up</string>
    <string name="verify_code_nverification">Code\nVerification</string>
    <string name="enter_the_one_time_password_sent_to_your_mobile_no">Enter the One Time Password sent to your Mobile No.</string>
    <string name="verify_enter_otp">Enter OTP</string>
    <string name="btn_verify_code">verify code</string>
    <string name="new_ncredentials">New\nCredentials</string>
    <string name="set_pass_your_number_has_been_verified">Your number has been verified</string>
    <string name="set_pass_new_password">New Password</string>
    <string name="set_pass_confirm_password">Confirm Password</string>
    <string name="btn_done">Done</string>
    <string name="splash_mini_library">Mini Library</string>
    <string name="toolbar_my_profile">My Profile</string>
    <string name="my_profie_user_name">User Name</string>
    <string name="my_profie_mobile_no">Mobile No</string>
    <string name="my_profie_email_id">Email Id</string>
    <string name="my_profie_favourite_category_of_book">Favourite Category of book</string>
    <string name="my_profie_password">Password</string>
    <string name="header_mini_library">Mini Library</string>
    <string name="about_app_mini_library">Mini Library</string>
    <string name="aboutapp">The Mini Library is a basic book app. It has features of accessing data into your profile, can change password if forgot,navigation drawer,adding and removing book to favourites and few more. This app is in developing stage your suggestions are always welcome.</string>
    <string name="dash_name_of_the_book">Name of the book</string>
    <string name="dash_name_of_the_author">Name of the Author</string>
    <string name="dash_rs_299">Rs. 299</string>
    <string name="dash_4_5">4.5</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="rs_499">Rs. 499</string>
    <string name="_4_5">4.5</string>
    <string name="sort">Sort</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourite</string>
    <string name="faqs">FAQs</string>
    <string name="about_app">About App</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="firstque">1) What languages are supported by Mini library?\n\n The app is currently available in English only, but we are working on adding other languages. Thank you for understanding.</string>
    <string name="secondque">2)I found an error in a story I read.What should I do?\n\n If you have questions about the plot or content, you can drop a mail in support@minilibrary.com with a screenshot of that particular page pointing error.</string>
    <string name="thirdque">3)I can\'t see any content on pages it keeps loading. What should I do?\n\n Please check that you are connected to a network or not. If there is no problem to your internet connection, kindly clear the cache data from your mobile settings and re-login.</string>
    <string name="fourthque">4)I want to change my password but I am not receiving OTP. What should I do?\n\n Sorry for the inconvenience, Kindly wait till 1 minute sometimes for few operators the code arrives little late than some. If the problem still persists, reopen the application and logout then try it once again.</string>
    <string name="fifthque">5)My problem is not mentioned above.What should I do?\n\n If you encountered a problem that is not listed, please send us an email via support@minilibrary.com outlining what issues you are experiencing.</string>
    <string name="additional_information">Additional Information</string>
    <string name="app_developer_divya_khare">App Developer:Divya Khare</string>
    <string name="nishukhare1997_gmail_com">nishukhare1997@gmail.com</string>
    <string name="version_1_0">VERSION : 1.0</string>
    <string name="keep_me_logged_in">Keep me logged In</string>
    <string name="your_account_has_been_succesfully_created">Your account has been succesfully created</string>
    <string name="registration_nconfirmation">Registration\nconfirmation</string>
</resources>
