<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.AboutAppFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
    <ImageView
        android:id="@+id/imgBookLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/book_logo"
        android:layout_gravity="start"/>
    <TextView
        android:id="@+id/txtAboutTheApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_mini_library"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/black_ops_one"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aboutapp"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:textAlignment="textStart"/>


    <TextView
        android:id="@+id/txtDeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_information"
        android:layout_marginTop="55dp"
        android:textColor="@color/colorBlack"
        android:fontFamily="@font/black_ops_one"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/txtDevName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_developer_divya_khare"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtDevEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nishukhare1997_gmail_com"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version_1_0"
        android:layout_marginTop="55dp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>
</ScrollView>