<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.DescriptionActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorDarkBlue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    <RelativeLayout
        android:id="@+id/llRelativeContentUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:weightSum="6">
            <ImageView
                android:id="@+id/imgBookImage"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1.5"
                android:padding="5dp"
                android:contentDescription="@string/des_act_book_image"
                android:scaleType="centerCrop"
                android:src="@drawable/book_logo" />
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.3">
                <TextView
                    android:id="@+id/txtBookName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/des_act_name_of_the_book"
                    android:textColor="#000000"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/txtBookAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtBookName"
                    android:padding="8dp"
                    android:text="@string/des_act_name_of_the_author"
                    android:textSize="15sp" />
                <TextView
                    android:id="@+id/txtBookPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtBookAuthor"
                    android:layout_alignParentBottom="true"
                    android:padding="8dp"
                    android:text="@string/_des_act_rs_299"
                    android:textColor="#357a38"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/txtBookRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:drawableStart="@drawable/ic_ratings"
                android:drawablePadding="4dp"
                android:padding="4dp"
                android:text="@string/des_act__4_5"
                android:textColor="#ffca28"
                android:textSize="15sp"
                android:textStyle="bold">
            </TextView>
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:id="@+id/svDescActi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_above="@id/btnAddtoFav"
        android:layout_below="@id/llRelativeContentUp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/txtAbouttheBook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des_act_about_the_book"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/txtBookDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/des_act_description"
                android:layout_below="@id/txtAbouttheBook"
                android:textSize="15sp"
                android:padding="6dp"
                android:layout_margin="10dp" />
        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnAddtoFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_gradient"
        android:text="@string/des_act_add_to_favourites"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#ffffff"/>
    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </ProgressBar>
    </RelativeLayout>
</RelativeLayout>

