<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.ForgotPassword"
    android:background="@drawable/bg_gradient">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorDarkBlue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_pass_act_forgot_password"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7dp"
        />

    <ImageView
        android:id="@+id/imgBookLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/book_logo"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="30dp"
        android:padding="2dp"
        android:background="@drawable/bg_image"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/for_pass_app_logo" />
    <TextView
        android:id="@+id/txtEnterdetailsFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_your_account_s_mobile_no_for_which_you_want_to_reset_your_password"
        android:layout_below="@id/imgBookLogo"
        android:textSize="18sp"
        android:fontFamily="@font/radley"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />
    <EditText
        android:id="@+id/etUserMobileNo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="phone"
        android:fontFamily="@font/radley"
        android:hint="@string/for_pass_enter_your_mobile_no_here"
        android:textColor="#000000"
        android:layout_margin="20dp"
        android:textAlignment="textStart"
        android:layout_below="@id/txtEnterdetailsFP"
        android:textSize="15sp"
        android:background="@drawable/bg_item"
        android:drawableStart="@drawable/ic_mobile"
        android:drawablePadding="7dp"
        android:padding="7dp" />
    <Button
        android:id="@+id/btnNext"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/for_pass_next"
        android:layout_below="@id/etUserMobileNo"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnNext"
        android:layout_marginBottom="-91dp"
        android:layout_centerHorizontal="true">
    </ProgressBar>
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="107dp"
        android:layout_height="125dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/book_gif" />
</RelativeLayout>
