<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.NewUserRegister"
    android:background="@drawable/bg_gradient">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorDarkBlue"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />
    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_sign_up"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginStart="7dp" />
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:inputType="text"
        android:maxLength="15"
        android:hint="@string/signup_name"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/bg_item"
        android:textAlignment="textStart"
        android:drawableStart="@drawable/ic_name"
        android:layout_below="@id/toolbar"
        android:drawablePadding="5dp"
        android:fontFamily="@font/radley"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etEmailId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"
        android:maxLength="25"
        android:hint="@string/signup_email_address"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/bg_item"
        android:textAlignment="textStart"
        android:layout_below="@+id/etName"
        android:fontFamily="@font/radley"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etMobileNo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="10"
        android:hint="@string/signup_mobile_number"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/bg_item"
        android:textAlignment="textStart"
        android:fontFamily="@font/radley"
        android:layout_below="@id/etEmailId"
        android:drawableStart="@drawable/ic_mobile"
        android:drawablePadding="5dp"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etFavCategory"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/signup_favourite_category_ex_romance_anime_thriller_etc"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:maxLength="10"
        android:fontFamily="@font/radley"
        android:background="@drawable/bg_item"
        android:textAlignment="textStart"
        android:layout_below="@id/etMobileNo"
        android:drawableStart="@drawable/ic_favourite"
        android:drawablePadding="5dp"
        android:padding="7dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:hint="@string/signup_password"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="15dp"
        android:maxLength="12"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/radley"
        android:background="@drawable/bg_item"
        android:textAlignment="textStart"
        android:layout_below="@id/etFavCategory"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="5dp"
        android:padding="7dp"/>
    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_btn_sign_up"
        android:layout_below="@id/etPassword"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/radley"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="20dp"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-69dp">
    </ProgressBar>
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="107dp"
        android:layout_height="125dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/book_gif" />
</RelativeLayout>

